test/cases/parser/BadTyarg.errors
src/BadTyarg.b:3:17: Syntax error (expected ',' or '>')
